Added the newest hot block. The Block of Mulch. ( I need to get more images :/ )

--- a/src/main/resources/assets/mallowwonderland/lang/en_us.json
+++ b/src/main/resources/assets/mallowwonderland/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.mallowwonderland.mulch": "Mulch",
-  "item.mallowwonderland.kebab": "Kebab"
+  "item.mallowwonderland.kebab": "Kebab",
+
+  "block.mallowwonderland.mulch_block": "Block of Mulch"
 }
