Added the new block as per friend request and a baseball item that will be turned into a projectile!

--- a/src/main/resources/assets/mallowwonderland/lang/en_us.json
+++ b/src/main/resources/assets/mallowwonderland/lang/en_us.json
@@ -2,5 +2,8 @@
   "item.mallowwonderland.mulch": "Mulch",
   "item.mallowwonderland.kebab": "Kebab",
 
-  "block.mallowwonderland.mulch_block": "Block of Mulch"
+  "item.mallowwonderland.baseball": "Baseball",
+
+  "block.mallowwonderland.mulch_block": "Block of Mulch",
+  "block.mallowwonderland.gearoid_block": "Block of Jeedle"
 }
