Added Tazer that hits entities with lightning.

--- a/src/main/resources/assets/mallowwonderland/lang/en_us.json
+++ b/src/main/resources/assets/mallowwonderland/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.mallowwonderland.kebab": "Kebab",
 
   "item.mallowwonderland.baseball": "Baseball",
+  "item.mallowwonderland.tazer": "Tazer",
 
   "block.mallowwonderland.mulch_block": "Block of Mulch",
   "block.mallowwonderland.gearoid_block": "Block of Jeedle"
